Resolve SpotBugs and CheckStyle warnings